--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../styles/stylesHead.css">
-        <link rel="stylesheet" href="../styles/stylesBody.css">
+        <link rel="stylesheet" href="styles/stylesHead.css">
+        <link rel="stylesheet" href="styles/stylesBody.css">
         <title>Malparidos Arg</title>
     </head>
     <body>
@@ -52,6 +52,6 @@
                 </div>
             </div>
         </div>
-        <script src="../scripts/scripts.js"></script>
+        <script src="scripts/scripts.js"></script>
     </body>
 </html>
