--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles/stylesHead.css">
         <link rel="stylesheet" href="styles/stylesBody.css">
+        <style type="text/css" media="screen">
+            A:link {text-decoration: none }
+            A:visited {color: currentColor; text-decoration: none }
+            A:hover {color: currentColor; text-decoration: none;}
+            *{outline:none !important;}*:focus {outline: none !important;}textarea:focus, input:focus{outline: none !important;}	a{text-decoration: none !important;outline: none !important;}
+        </style>
         <title>Malparidos Arg</title>
     </head>
     <body>
@@ -14,41 +20,48 @@
                 <h2></h2>
             </div>
             <div class="headOptions">
-                <h2 class="myButton">Conocimientos</h2>
+                <h2><a href="#conocimientos" class="myButton">Conocimientos</a></h2>
             </div>
             <div class="headOptions">
-                <h2 class="myButton">Trabajos</h2>
+                <h2><a href="#trabajos" class="myButton">Trabajos</a></h2>
             </div>
             <div class="headOptions">
-                <h2 class="myButton">Contacto</h2>
+                <h2><a href="#contacto" class="myButton">Contacto</a></h2>
             </div>
         </div>
         <div id="bgImage1">
         </div>
         <div id="body" class="flexBox2">
             <div class="container">
-                <div id="especialidades" class="bodyOptions">
+                <div id="conocimientos" class="bodyOptions">
                     <h2>Conocimientos</h2>
                 </div>
                 <div class="bodyText">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit ea molestias molestiae possimus similique! Eveniet veritatis, iusto provident mollitia accusamus architecto placeat exercitationem consequatur aliquam facere officiis eius voluptatibus temporibus vero perferendis, adipisci magni ratione enim. Nihil fugiat veniam architecto dolor! Officia perferendis at suscipit aliquam unde vel aperiam repellat porro autem quasi laboriosam nihil perspiciatis pariatur est asperiores ratione eos minus, libero quidem cum et impedit! Nobis suscipit id ipsa ducimus quia consectetur possimus, provident eveniet blanditiis dignissimos culpa iste temporibus optio sunt ea quam praesentium fugiat doloribus dolor hic. Soluta facilis, ea repellat molestias magnam laudantium odit earum.
+                    <ul>
+                        HTML (Intermedio)
+                        CSS (Intermedio)
+                        JavaScript (Intermedio)
+                    </ul>
                 </div>
             </div>
             <div id="bodyVideo1"><iframe width="600" height="400" src="https://www.youtube.com/embed/vdrn4ouZRvQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
             <div class="container">
-                <div id="servers" class="bodyOptions">
+                <div id="trabajos" class="bodyOptions">
                     <h2>Trabajos</h2>
                 </div>
                 <div class="bodyText">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Et optio labore obcaecati quidem perspiciatis eius quos modi a quasi deserunt corrupti quisquam sint fuga beatae, aliquid fugit molestias repudiandae sequi quod voluptatem fugiat commodi! Maiores in iste consequuntur dolores veniam earum? Quod magnam repudiandae dicta eos distinctio, quo voluptate reiciendis vel error! Est tempore illo voluptatum doloribus, laudantium cum fugit consequuntur debitis maiores, quam nemo qui! Voluptatibus nisi veritatis ex quibusdam nulla quasi voluptates amet, laudantium quod deleniti vel eligendi eveniet minus aspernatur pariatur, architecto quam earum? In molestias temporibus rerum rem animi a consequuntur illum quas? Quia, accusantium voluptas.
+                    Actualmente trabajando.
                 </div>
             </div>
             <div class="container">
-                <div id="conocenos" class="bodyOptions">
+                <div id="contacto" class="bodyOptions">
                     <h2>Contacto</h2>
                 </div>
                 <div class="bodyText">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta rerum placeat, officia laborum ad nihil doloremque atque et, delectus perspiciatis nisi debitis! Exercitationem laboriosam optio voluptatem similique ducimus unde delectus, illo facilis voluptatum accusantium modi reiciendis nam veritatis natus rerum nostrum minima, accusamus ut. Numquam blanditiis, maiores quo hic assumenda iure debitis sint ab eaque eveniet doloribus rerum repellat ratione temporibus, at quae explicabo fugiat vitae laborum aspernatur maxime porro! Reiciendis quibusdam mollitia nihil totam dicta tenetur esse. Cumque, aperiam? Labore ea voluptate inventore delectus tempora fugiat soluta praesentium sapiente quidem, quo dolore accusamus a iure vitae quod odit iste.
+                    <ul>
+                        Email: blancolucas20@gmail.com
+                        Celular: +542494246680
+                    </ul>
                 </div>
             </div>
         </div>
